--- a/src/Components/Auth/LoginForm/LoginForm.scss
+++ b/src/Components/Auth/LoginForm/LoginForm.scss
@@ -2,9 +2,10 @@
 
 .login-form {
     margin-top: 50px;
-
+    display: flex;
+    justify-content: center;
     h1{
-        color: $font-light;
+        color: $font-purple;
         text-align: center;
         font-size: 35px;
         padding-bottom: 20px;
@@ -15,15 +16,13 @@
             .input {
                 margin-bottom: 5px;
                 input{
-                    background-color: $background-grey;
+                    display: flex;
+                    justify-items: center;
+                    background-color: transparent;
                     border: 0;
+                    border-bottom: 2px solid $font-purple;
                     font-size: 16px;
-                    color: $font-light;
-                    &:hover, &:active,
-                    &:focus {
-                        background-color: $background-grey-hover;
-                        border: 0; 
-                    }
+                    color: $font-purple;
                 }
                 i {
                     color: $font-light;
@@ -37,17 +36,7 @@
                 }
             }
         }
-        .button {
-            width: 100%;
-            background-color: $primary-color;
-            color: $font-light;
-            text-transform: uppercase;
-            margin-top: 10px;
-            border-radius: 50px;
-            padding: 17px 0px;
-            font-size: 14px;
-            letter-spacing: 3px;
-        }
+
         .error-text {
             color: $font-light;
             padding-left: 15px;
@@ -67,7 +56,30 @@
             }
         }
     }
-
+    &__button {
+        .ui.button {
+                width: 10rem;
+                background: linear-gradient(144deg,#af40ff,#5b42f3 50%,#00ddeb);
+                color: $font-light;
+                text-transform: uppercase;
+                margin-top: 10px;
+                border-radius: 10px;
+                padding: 17px 0px;
+                font-size: 14px;
+                letter-spacing: 3px;
+        }
+    }
+    .continue-button {
+        width: 10rem;
+        background: linear-gradient(144deg,#af40ff,#5b42f3 50%,#00ddeb);
+        color: $font-light;
+        text-transform: uppercase;
+        margin-top: 10px;
+        border-radius: 10px;
+        padding: 17px 0px;
+        font-size: 14px;
+        letter-spacing: 3px;
+    }
     &__options {
         margin-top: 50px;
         color: $font-light;
@@ -75,7 +87,7 @@
         font-size: 16px;
         text-transform: uppercase;
         font-weight: bold;
-
+        
         p {
             &:first-of-type {
                 margin-bottom: 40px;
