--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -4,6 +4,7 @@ $primary-color-hover: #1ed75f;
 $font-light:rgb(235, 235, 235);
 $font-grey:rgb(209, 209, 209);
 $font-dark:#000;
+$font-purple: #5b42f3;
 
 $background-primary: $primary-color;
 
